Collapsable menu script finished up. Additional content added. Raw HTML formatted. CSS arrows in headers completed.

--- a/index.html
+++ b/index.html
@@ -13,11 +13,28 @@
   </head>
   <body>
     <div class="content">
-      <h2><span class="arrow"></span>About Jared</h2>
-      <p><img class="my-picture" src="images/me.jpg"><br /><br />I'm an aspiring web developer, primarily working with HTML, CSS, JavaScript, and Ruby. My favorite RoboCop is the 1987 version, my favorite color is Orange, and I'm really more of a cat person.<br /><br />I used to work in marketing, but I decided it just wasn't for me. I decided to do something about it by flying out across the country to San Francisco to attend <a href="http://devbootcamp.com">DevBootCamp</a>. Now that I'm back home, I'm looking to apply everything I learned there with the right organization, and grow from there.</p>
-      <h2><span class="arrow"></span></span>Connect</h2>
-      <p><a href="http://google.com/+JaredStander">Google+</a><br /><a href="https://www.linkedin.com/in/jared-stander-52261335">LinkedIn</a><br /><a href="http://github.com/jaredstander">Github</a></p>
-      <h2><span class="arrow"></span></span>Portfolio</h2>
+
+      <h2><div class="circle"><div class="downarrow"></div><div class="uparrow"></div></div>About Jared</h2>
+      <p>
+        <img class="my-picture" src="images/me.jpg">
+        <br /><br />
+        I'm an aspiring web developer, primarily working with HTML, CSS, JavaScript, and Ruby. My favorite RoboCop is the 1987 version, my favorite color is Orange, and I'm really more of a cat person.
+        <br /><br />
+        I used to work in marketing, but I decided it just wasn't for me. I decided to do something about it by flying out across the country to San Francisco to attend <a href="http://devbootcamp.com">DevBootCamp</a>. Now that I'm back home, I'm looking to apply everything I learned there with the right organization, and grow from there.
+      </p>
+      
+      <h2><div class="circle"><div class="downarrow"></div><div class="uparrow"></div></div>Connect</h2>
+      <p>
+        <a href="http://google.com/+JaredStander">Google+</a>
+        <br />
+        <a href="https://www.linkedin.com/in/jared-stander-52261335">LinkedIn</a>
+        <br />
+        <a href="http://github.com/jaredstander">Github</a>
+        <br />
+        <a href="http://jaredstander.com/files/JaredStanderResume.pdf">Résumé</a>
+      </p>
+      
+      <h2><div class="circle"><div class="downarrow"></div><div class="uparrow"></div></div>Portfolio</h2>
       <p>
         <a href="http://13thagepointbuy.com" target="new">13th Age Point Buy Calculator</a> | <a href="http://github.com/jaredstander/13thagepointbuycalculator" target="new">Source</a>
         <br />
@@ -27,10 +44,11 @@
         <br />
         <span class="project-details">Pure Ruby</span>
         <br /><br />
-        <a href="http://github.com/jaredstander/domain_checker" target="new">Batch Domain Checker</a> | <a href="http://github.com/jaredstander/domain_checker" target="new">Source</a>
+        <a href="http://jaredstander.com/domain_checker" target="new">Batch Domain Checker</a> | <a href="http://github.com/jaredstander/domain_checker" target="new">Source</a>
         <br />
         <span class="project-details">HTML, CSS, jQuery, AJAX, PHP</span>
       </p>
+
     </div>
   </body>
 </html>
