Adding more content to main page. Moved picture to be more prominent. Added a page title header above the other sections.

--- a/index.html
+++ b/index.html
@@ -14,13 +14,19 @@
   <body>
     <div class="content">
 
+      <h1>Hello world!</h1>
+
+      <img class="my-picture" src="images/me.jpg">
+
       <h2><div class="circle"><div class="downarrow"></div><div class="uparrow"></div></div>About Jared</h2>
       <p>
-        <img class="my-picture" src="images/me.jpg">
-        <br /><br />
         I'm an aspiring web developer, primarily working with HTML, CSS, JavaScript, and Ruby. My favorite RoboCop is the 1987 version, my favorite color is Orange, and I'm really more of a cat person.
         <br /><br />
         I used to work in marketing, but I decided it just wasn't for me. I decided to do something about it by flying out across the country to San Francisco to attend <a href="http://devbootcamp.com">DevBootCamp</a>. Now that I'm back home, I'm looking to apply everything I learned there with the right organization, and grow from there.
+        <br /><br />
+        Particularly, I'm interested in the whole stack-- I used Linux of soem flavor or another for a variety of years, so I took naturally to scripting and writing things behind the scenes. On the other hand, I've also beed dabbling with HTML before there was CSS (and when it came out, I was glad to get it!) and have a good handle on vanilla JavaScript.
+        <br /><br />
+        So in that way, there are very few technologies I will say no to, given the chance to learn even more. If I sound like the kind of dedicated developer you'd like for your team, let's talk!
       </p>
       
       <h2><div class="circle"><div class="downarrow"></div><div class="uparrow"></div></div>Connect</h2>
@@ -36,6 +42,10 @@
       
       <h2><div class="circle"><div class="downarrow"></div><div class="uparrow"></div></div>Portfolio</h2>
       <p>
+        This Website! | <a href="http://github.com/jaredstander/website_redesign_2016" target="new">Source</a>
+        <br />
+        <span class="project-details">HTML, CSS including dynamic scaling using media query and viewport units for element sizes, JavaScript, jQuery</span>
+        <br /><br />
         <a href="http://13thagepointbuy.com" target="new">13th Age Point Buy Calculator</a> | <a href="http://github.com/jaredstander/13thagepointbuycalculator" target="new">Source</a>
         <br />
         <span class="project-details">HTML, CSS, JavaScript, Angular data binding</span>
