Spelling mistakes, oh no!

--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
         <br /><br />
         I used to work in marketing, but I decided it just wasn't for me. I decided to do something about it by flying out across the country to San Francisco to attend <a href="http://devbootcamp.com">DevBootCamp</a>. Now that I'm back home, I'm looking to apply everything I learned there with the right organization, and grow from there.
         <br /><br />
-        Particularly, I'm interested in the whole stack-- I used Linux of soem flavor or another for a variety of years, so I took naturally to scripting and writing things behind the scenes. On the other hand, I've also beed dabbling with HTML before there was CSS (and when it came out, I was glad to get it!) and have a good handle on vanilla JavaScript.
+        Particularly, I'm interested in the whole stack-- I used Linux of some flavor or another for a number of years, so I took naturally to scripting and writing things behind the scenes. On the other hand, I've also beed dabbling with HTML before there was CSS (and when it came out, I was glad to get it!) and have a good handle on vanilla JavaScript.
         <br /><br />
-        So in that way, there are very few technologies I will say no to, given the chance to learn even more. If I sound like the kind of dedicated developer you'd like for your team, let's talk!
+        So in that way, there are very few technologies I ever turn my nose up at, given the chance to learn even more. If I sound like the kind of dedicated developer you'd like for your team, let's talk!
       </p>
       
       <h2><div class="circle"><div class="downarrow"></div><div class="uparrow"></div></div>Connect</h2>
