--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <br /><br />
         Particularly, I'm interested in the whole stack-- I used Linux of some flavor or another for a number of years, so I took naturally to scripting and writing things behind the scenes. On the other hand, I've also beed dabbling with HTML before there was CSS (and when it came out, I was glad to get it!) and have a good handle on vanilla JavaScript.
         <br /><br />
-        So in that way, there are very few technologies I ever turn my nose up at, given the chance to learn even more. If I sound like the kind of dedicated developer you'd like for your team, let's talk!
+        So in that way, there are very few technologies I ever turn my nose up at, given the chance to learn even more. You never know what will be useful, and what lessons from a completely different language or data structure will carry over to another and help you overcome a new challenege. If that's the kind of passion you want for your team, then feel free to reach out to me.
       </p>
       
       <h2><div class="circle"><div class="downarrow"></div><div class="uparrow"></div></div>Connect</h2>
