Added a brand new page to connect to a demo instance of j3bot. j3bot link updated on the main page.

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <br />
         <span class="project-details">HTML, CSS, JavaScript, Angular data binding</span>
         <br /><br />
-        <a href="http://github.com/jaredstander/j3bot" target="new">IRC Bot</a> | <a href="http://github.com/jaredstander/j3bot" target="new">Source</a>
+        <a href="http://jaredstander.com/j3bot/j3bot.html" target="new">IRC Bot</a> | <a href="http://github.com/jaredstander/j3bot" target="new">Source</a>
         <br />
         <span class="project-details">Pure Ruby</span>
         <br /><br />
