Changing IRC demo server address.

--- a/j3bot/j3bot.html
+++ b/j3bot/j3bot.html
@@ -13,7 +13,7 @@
 
     <p>Use the dialog below to log into a test channel where you can see the bot in action and interact with it.</p>
     <p>(After clicking "Start...", the IRC channel interface will open on a new page.)</p>
-    <iframe src="https://kiwiirc.com/client/irc.wherestheparty.at/?nick=testuser|?#j3bottest" style="border:0; width:100%; height:450px;"></iframe>
+    <iframe src="https://kiwiirc.com/client/irc.servercentral.net/?nick=testuser|?#ircbotportfoliodemo" style="border:0; width:100%; height:450px;"></iframe>
 
   </body>
 </html>
