Adding 2 practical tests I've done.

--- a/index.html
+++ b/index.html
@@ -58,6 +58,14 @@
         <a href="http://jaredstander.com/domain_checker" target="new">Batch Domain Checker</a> | <a href="http://github.com/jaredstander/domain_checker" target="new">Source</a>
         <br />
         <span class="project-details">HTML, CSS, jQuery, AJAX, PHP</span>
+        <br /><br />
+        <a href="http://jaredstander.com/kenzan_practical" target="new">Coding Test #1</a> | <a href="http://github.com/jaredstander/kenzan_practical" target="new">Source</a>
+        <br />
+        <span class="project-details">HTML, CSS, Angular</span>
+        <br /><br />
+        <a href="http://jaredstander.com/cybercare_practical" target="new">Coding Test #2</a> | <a href="http://github.com/jaredstander/cybercare_practical" target="new">Source</a>
+        <br />
+        <span class="project-details">HTML, CSS, Angular</span>
       </p>
 
     </div>
