--- a/index.html
+++ b/index.html
@@ -59,11 +59,15 @@
         <br />
         <span class="project-details">HTML, CSS, jQuery, AJAX, PHP</span>
         <br /><br />
-        <a href="http://jaredstander.com/kenzan_practical" target="new">Coding Test #1</a> | <a href="http://github.com/jaredstander/kenzan_practical" target="new">Source</a>
+        Coding Test #1 | <a href="http://github.com/jaredstander/annkissam_practical" target="new">Source</a>
+        <br />
+        <span class="project-details">Pure Ruby</span>
+        <br /><br />
+        <a href="http://jaredstander.com/kenzan_practical" target="new">Coding Test #2</a> | <a href="http://github.com/jaredstander/kenzan_practical" target="new">Source</a>
         <br />
         <span class="project-details">HTML, CSS, Angular</span>
         <br /><br />
-        <a href="http://jaredstander.com/cybercare_practical" target="new">Coding Test #2</a> | <a href="http://github.com/jaredstander/cybercare_practical" target="new">Source</a>
+        <a href="http://jaredstander.com/cybercare_practical" target="new">Coding Test #3</a> | <a href="http://github.com/jaredstander/cybercare_practical" target="new">Source</a>
         <br />
         <span class="project-details">HTML, CSS, Angular</span>
       </p>
