--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <br /><br />
         I used to work in marketing, but I decided it just wasn't for me. I decided to do something about it by flying out across the country to San Francisco to attend <a href="http://devbootcamp.com">DevBootCamp</a>. Now that I'm back home, I'm looking to apply everything I learned there with the right organization, and grow from there.
         <br /><br />
-        Particularly, I'm interested in the whole stack-- I used Linux of some flavor or another for a number of years, so I took naturally to scripting and writing things behind the scenes. On the other hand, I've also beed dabbling with HTML before there was CSS (and when it came out, I was glad to get it!) and have a good handle on vanilla JavaScript.
+        Particularly, I'm interested in the whole stack-- I used Linux of some flavor or another for a number of years, so I took naturally to scripting and writing things behind the scenes. On the other hand, I've also been dabbling with HTML before there was CSS (and when it came out, I was glad to get it!) and have a good handle on vanilla JavaScript.
         <br /><br />
         So in that way, there are very few technologies I ever turn my nose up at, given the chance to learn even more. You never know what will be useful, and what lessons from a completely different language or data structure will carry over to another and help you overcome a new challenege. If that's the kind of passion you want for your team, then feel free to reach out to me.
       </p>
