Adding rails project to portfolio, adding mouseover pointing cursor to H2s in order to help indicate them as clickable.

--- a/index.html
+++ b/index.html
@@ -47,6 +47,10 @@
         <br />
         <span class="project-details">HTML, CSS including dynamic scaling using media query and viewport units for element sizes, JavaScript, jQuery</span>
         <br /><br />
+        <a href="http://knoverflow.herokuapp.com/" target="new">Knoverflow</a> | <a href="http://github.com/jaredstander/knoverflow_2016" target="new">Source</a>
+        <br />
+        <span class="project-details">Ruby on Rails, HTML, CSS, jQuery, AJAX, Postgres, Polymorphic Associations</span>
+        <br /><br />
         <a href="http://13thagepointbuy.com" target="new">13th Age Point Buy Calculator</a> | <a href="http://github.com/jaredstander/13thagepointbuycalculator" target="new">Source</a>
         <br />
         <span class="project-details">HTML, CSS, JavaScript, Angular data binding</span>
